--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,7 +19,9 @@ jobs:
           go-version: 1.17
 
       - name: Download
-        run: go mod download
+        run: |
+          go mod tidy
+          go mod download
 
       - name: Build
         run: go build -v ./...
