--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,8 +14,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: go mod
-        run: go mod tidy
+
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.17
+
+      - name: Download
+        run: |
+          go mod tidy
+          go mod download
+
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
         with:
