--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Download
         run: |
           go mod tidy
+          go mod download
 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
