--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Go
+name: test
 
 on:
   push:
@@ -7,7 +7,6 @@ on:
     branches: [ main ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
@@ -21,9 +20,7 @@ jobs:
       - name: Download
         run: |
           go mod tidy
-
-      - name: Build
-        run: go build -v ./...
+          go mod download
 
       - name: Test
         run: go test -v ./...
