--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -1,39 +1,63 @@
-name: golangci-lint
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-permissions:
-  contents: read
-  # Optional: allow read access to pull request. Use with `only-new-issues` option.
-  # pull-requests: read
+name: reviewdog
+on: [pull_request]
 jobs:
-  golangci:
-    name: lint
+  # NOTE: golangci-lint doesn't report multiple errors on the same line from
+  # different linters and just report one of the errors?
+
+  golangci-lint:
+    name: runner / golangci-lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Run golangci-lint
-        uses: golangci/golangci-lint-action@v2
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+      - name: golangci-lint
+        uses: reviewdog/action-golangci-lint@v2
         with:
-          version: v1.39.0
+          # optionally use a specific version of Go rather than the latest one
+          go_version: '1.17'
 
+          # Can pass --config flag to change golangci-lint behavior and target
+          # directory.
+          golangci_lint_flags: '--config=.github/.golangci.yml ./testdata'
+          workdir: subdirectory/
 
-        # Optional: working directory, useful for monorepos
-        # working-directory: somedir
+  # Use golint via golangci-lint binary with "warning" level.
+  golint:
+    name: runner / golint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+      - name: golint
+        uses: reviewdog/action-golangci-lint@v2
+        with:
+          golangci_lint_flags: '--disable-all -E golint'
+          tool_name: golint # Change reporter name.
+          level: warning # GitHub Status Check won't become failure with this level.
 
-        # Optional: golangci-lint command line arguments.
-        # args: --issues-exit-code=0
+  # You can add more and more supported linters with different config.
+  errcheck:
+    name: runner / errcheck
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+      - name: errcheck
+        uses: reviewdog/action-golangci-lint@v2
+        with:
+          golangci_lint_flags: '--disable-all -E errcheck'
+          tool_name: errcheck
+          level: info
 
-        # Optional: show only new issues if it's a pull request. The default value is `false`.
-        # only-new-issues: true
+  # Disable cache of golangci-lint result, go build and go dependencies
+  with_cache:
+    name: runner / errcheck
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
 
-        # Optional: if set to true then the action will use pre-installed Go.
-        # skip-go-installation: true
-
-        # Optional: if set to true then the action don't cache or restore ~/go/pkg.
-        # skip-pkg-cache: true
-
-        # Optional: if set to true then the action don't cache or restore ~/.cache/go-build.
-        # skip-build-cache: true
+      - name: golangci-lint
+        uses: reviewdog/action-golangci-lint@v2
+        with:
+          cache: false
